// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message component renders correct error message theme 1`] = `
<div>
  <div
    className="MuiPaper-root makeStyles-paper-3 MuiPaper-elevation5 MuiPaper-rounded"
    style={
      Object {
        "backgroundColor": "#F56236",
      }
    }
  >
    <div
      className="MuiGrid-root makeStyles-grid-6 MuiGrid-container MuiGrid-justify-xs-space-between"
    >
      <div
        className="MuiGrid-root makeStyles-message-4 MuiGrid-item"
      >
        <p
          className="MuiTypography-root MuiTypography-body1"
        >
          hello
        </p>
      </div>
      <div
        className="MuiGrid-root makeStyles-clear-5 MuiGrid-item"
      >
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-2"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiButton-label"
          >
            Clear
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Message component renders correct info message theme 1`] = `
<div>
  <div
    className="MuiPaper-root makeStyles-paper-3 MuiPaper-elevation5 MuiPaper-rounded"
    style={
      Object {
        "backgroundColor": "#88FCA3",
      }
    }
  >
    <div
      className="MuiGrid-root makeStyles-grid-6 MuiGrid-container MuiGrid-justify-xs-space-between"
    >
      <div
        className="MuiGrid-root makeStyles-message-4 MuiGrid-item"
      >
        <p
          className="MuiTypography-root MuiTypography-body1"
        >
          hello
        </p>
      </div>
      <div
        className="MuiGrid-root makeStyles-clear-5 MuiGrid-item"
      >
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-2"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiButton-label"
          >
            Clear
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Message component renders correct message 1`] = `
<div>
  <div
    className="MuiPaper-root makeStyles-paper-3 MuiPaper-elevation5 MuiPaper-rounded"
    style={
      Object {
        "backgroundColor": "#F56236",
      }
    }
  >
    <div
      className="MuiGrid-root makeStyles-grid-6 MuiGrid-container MuiGrid-justify-xs-space-between"
    >
      <div
        className="MuiGrid-root makeStyles-message-4 MuiGrid-item"
      >
        <p
          className="MuiTypography-root MuiTypography-body1"
        >
          hello
        </p>
      </div>
      <div
        className="MuiGrid-root makeStyles-clear-5 MuiGrid-item"
      >
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-2"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiButton-label"
          >
            Clear
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Message component renders correct warning message theme 1`] = `
<div>
  <div
    className="MuiPaper-root makeStyles-paper-3 MuiPaper-elevation5 MuiPaper-rounded"
    style={
      Object {
        "backgroundColor": "#FCE788",
      }
    }
  >
    <div
      className="MuiGrid-root makeStyles-grid-6 MuiGrid-container MuiGrid-justify-xs-space-between"
    >
      <div
        className="MuiGrid-root makeStyles-message-4 MuiGrid-item"
      >
        <p
          className="MuiTypography-root MuiTypography-body1"
        >
          hello
        </p>
      </div>
      <div
        className="MuiGrid-root makeStyles-clear-5 MuiGrid-item"
      >
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-2"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiButton-label"
          >
            Clear
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
